--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
 <div class="container">
     <nav class="row align-items-center justify-content-between nav">
-        <div class="col-lg-2">
+        <div class="col-sm-2">
             <div class="logo">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px" height="28px"> <defs> <linearGradient id="PSgrad_0" x1="0%" x2="5.234%" y1="99.863%" y2="0%"> <stop offset="0%" stop-color="rgb(15,51,255)" stop-opacity="1" /> <stop offset="76%" stop-color="rgb(7,210,179)" stop-opacity="1" /> </linearGradient> </defs> <path fill-rule="evenodd"  fill="rgb(57, 21, 87)" d="M27.941,18.703 C26.804,18.703 25.882,17.505 25.882,16.027 L25.882,12.986 C25.882,11.508 26.804,10.309 27.941,10.309 C29.078,10.309 30.000,11.508 30.000,12.986 L30.000,16.027 C30.000,17.505 29.078,18.703 27.941,18.703 ZM21.471,22.969 C20.334,22.969 19.412,21.771 19.412,20.292 L19.412,8.706 C19.412,7.228 20.334,6.029 21.471,6.029 C22.608,6.029 23.529,7.228 23.529,8.706 L23.529,20.292 C23.529,21.771 22.608,22.969 21.471,22.969 ZM15.000,28.000 C13.861,28.000 12.938,27.077 12.938,25.937 L12.938,2.062 C12.938,0.923 13.861,-0.000 15.000,-0.000 C16.139,-0.000 17.063,0.923 17.063,2.062 L17.063,25.937 C17.063,27.077 16.139,28.000 15.000,28.000 ZM8.529,22.969 C7.392,22.969 6.471,21.771 6.471,20.292 L6.471,8.706 C6.471,7.228 7.392,6.029 8.529,6.029 C9.666,6.029 10.588,7.228 10.588,8.706 L10.588,20.292 C10.588,21.771 9.666,22.969 8.529,22.969 ZM2.059,18.703 C0.922,18.703 -0.000,17.505 -0.000,16.027 L-0.000,12.986 C-0.000,11.508 0.922,10.309 2.059,10.309 C3.196,10.309 4.118,11.508 4.118,12.986 L4.118,16.027 C4.118,17.505 3.196,18.703 2.059,18.703 Z"/> <path fill="url(#PSgrad_0)" d="M27.941,18.703 C26.804,18.703 25.882,17.505 25.882,16.027 L25.882,12.986 C25.882,11.508 26.804,10.309 27.941,10.309 C29.078,10.309 30.000,11.508 30.000,12.986 L30.000,16.027 C30.000,17.505 29.078,18.703 27.941,18.703 ZM21.471,22.969 C20.334,22.969 19.412,21.771 19.412,20.292 L19.412,8.706 C19.412,7.228 20.334,6.029 21.471,6.029 C22.608,6.029 23.529,7.228 23.529,8.706 L23.529,20.292 C23.529,21.771 22.608,22.969 21.471,22.969 ZM15.000,28.000 C13.861,28.000 12.938,27.077 12.938,25.937 L12.938,2.062 C12.938,0.923 13.861,-0.000 15.000,-0.000 C16.139,-0.000 17.063,0.923 17.063,2.062 L17.063,25.937 C17.063,27.077 16.139,28.000 15.000,28.000 ZM8.529,22.969 C7.392,22.969 6.471,21.771 6.471,20.292 L6.471,8.706 C6.471,7.228 7.392,6.029 8.529,6.029 C9.666,6.029 10.588,7.228 10.588,8.706 L10.588,20.292 C10.588,21.771 9.666,22.969 8.529,22.969 ZM2.059,18.703 C0.922,18.703 -0.000,17.505 -0.000,16.027 L-0.000,12.986 C-0.000,11.508 0.922,10.309 2.059,10.309 C3.196,10.309 4.118,11.508 4.118,12.986 L4.118,16.027 C4.118,17.505 3.196,18.703 2.059,18.703 Z"/> </svg>
                 <h1 class="min-header logo-header">Global</h1>
             </div>
         </div>
 
-        <div class="col-lg-3">
+        <div class="col-sm-3">
             <div class="nav-button">
                 <button class="hire-button button-content">
                     <span class="button-text">Hire us</span>
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div class="col-lg-1">
+        <div class="col-sm-1">
             <div class="burger">
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19px" height="14px"> <path fill-rule="evenodd"  fill="rgb(255, 255, 255)" d="M18.000,2.000 L1.000,2.000 C0.448,2.000 -0.000,1.552 -0.000,1.000 C-0.000,0.448 0.448,0.000 1.000,0.000 L18.000,0.000 C18.552,0.000 19.000,0.448 19.000,1.000 C19.000,1.552 18.552,2.000 18.000,2.000 ZM4.000,8.000 C3.448,8.000 3.000,7.552 3.000,7.000 C3.000,6.448 3.448,6.000 4.000,6.000 L15.000,6.000 C15.552,6.000 16.000,6.448 16.000,7.000 C16.000,7.552 15.552,8.000 15.000,8.000 L4.000,8.000 ZM1.000,12.000 L18.000,12.000 C18.552,12.000 19.000,12.448 19.000,13.000 C19.000,13.552 18.552,14.000 18.000,14.000 L1.000,14.000 C0.448,14.000 -0.000,13.552 -0.000,13.000 C-0.000,12.448 0.448,12.000 1.000,12.000 Z"/> </svg>
             </div>
@@ -47,7 +47,7 @@
 
         <div class="row slide slide1 slide-active animate__animated animate__fadeIn">
             <div class="row slide1__main">
-                <div class="col-lg-4 offset-lg-2 main__text">
+                <div class="col-sm-4 offset-sm-2 main__text">
                     <h2 class="text1__header big-header">Your next interactive experience</h2>
                     <button class="text1__button">
                             <span class="button-text button1__text button1__text_position">Hire us
@@ -55,12 +55,12 @@
                             </span>
                     </button>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-sm-6">
                     <img src="img/bigAstronaut.png" alt="astronaut" class="">
                 </div>
             </div>
             <div class="row slide1__extra">
-                <div class="col-lg-3 offset-lg-2">
+                <div class="col-sm-3 offset-sm-2">
                     <div class="extra1__link">
                         <h3 class="link1__header min-header">
                             Metiew&Smith
@@ -70,17 +70,17 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-sm-3">
                     <div class="extra1__link">
                         <h3 class="link1__header min-header">
-                            Fantasy interactive
+                            Interactive
                         </h3>
                         <p class="description">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-sm-3">
                     <div class="extra1__link">
                         <h3 class="link1__header min-header">
                             Paul&Shark
@@ -95,13 +95,13 @@
 
         <div class="row slide slide2">
             <div class="row slide2__header slide-header">
-                <h2 class="offset-lg-5 mid-header">Selected works</h2>
+                <h2 class="offset-sm-5 mid-header">Selected works</h2>
             </div>
             <div class="row slide2__slider">
 
-                <img src="img/left-arrow.png" alt="arrow" class="offset-lg-1 left-arrow">
+                <img src="img/left-arrow.png" alt="left-arrow" class="offset-sm-1 left-arrow">
 
-                <div class="col-lg-9 slider">
+                <div class="col-sm-9 slider">
 
                     <div class="slider-slide">
                         <img src="img/slider3.png" alt="slick" class="slider-image">
@@ -128,37 +128,37 @@
 
                 </div>
 
-                <img src="img/right-arrow.png" alt="arrow" class="right-arrow">
+                <img src="img/right-arrow.png" alt="right-arrow" class="right-arrow">
 
             </div>
         </div>
 
         <div class="row slide slide3">
             <div class="row slide3__main">
-                <div class="col-lg-4 offset-lg-2 main__text">
+                <div class="col-sm-4 offset-sm-2 main__text">
                     <h2 class="text3_header big-header">We<br>believe in passionate people</h2>
                     <span class="button-text button3__text">Career
                         <svg class="button3__svg text-svg" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 8 8"> <path d="M5 0v2h-5v1h5v2l3-2.53-3-2.47z" transform="translate(0 1)" fill="#fff" /> </svg>
                     </span>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-sm-6">
                     <img src="img/person.png" alt="person" class="">
                 </div>
             </div>
             <div class="row no-gutters slide3__extra">
-                <div class="col-lg-2 offset-lg-2">
+                <div class="col-sm-2 offset-sm-2">
                     <div class="extra3__picture">
                         <h3 class="picture3__header min-header">Winners</h3>
                         <img src="img/pic1.png" alt="winners" class="">
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-sm-2">
                     <div class="extra3__picture">
                         <h3 class="picture3__header min-header">Philosophy</h3>
                         <img src="img/pic2.png" alt="philosophy" class="">
                     </div>
                 </div>
-                <div class="col-lg-2">
+                <div class="col-sm-2">
                     <div class="extra3__picture">
                         <h3 class="picture3__header min-header">History</h3>
                         <img src="img/pic3.png" alt="history" class="">
@@ -171,7 +171,7 @@
             <div class="row map">
                 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&amp;width=90%25&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>
             </div>
-            <div class="col-lg-3 offset-lg-7">
+            <div class="col-sm-3 offset-sm-7">
                 <div class="row slide4__contacts">
                     <a href="https://yandex.ru/maps/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&source=constructorLink" class="contacts4__link">Pawia 5,31-154 Kraków, Polanrd</a>
                     <a href="mailto:alyonium2.0@gmail.com" class="contacts4__link">alyonium2.0@gmail.com</a>
@@ -191,11 +191,11 @@
 
         <div class="row slide slide5">
             <div class="row slide5__header slide-header">
-                <h2 class="offset-lg-5 mid-header">You want us to do</h2>
+                <h2 class="offset-sm-5 mid-header">You want us to do</h2>
             </div>
 
             <div class="row w-100 align-items-center justify-content-center">
-                <div class="col-lg-3">
+                <div class="col-sm-3">
                     <div class="checkbox">
                         <p class="checkbox-header">
                             App Design
@@ -206,7 +206,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-sm-3">
                     <div class="checkbox">
                         <p class="checkbox-header">
                             Graphic Design
@@ -217,7 +217,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3">
+                <div class="col-sm-3">
                     <div class="checkbox">
                         <p class="checkbox-header">
                             Motion Design
@@ -231,7 +231,7 @@
             </div>
 
             <div class="row w-100 align-items-center justify-content-center">
-                <div class="col-lg-3">
+                <div class="col-sm-3">
                     <div class="checkbox">
                         <p class="checkbox-header">
                             UX Design
@@ -241,7 +241,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-sm-3">
                     <div class="checkbox">
                         <p class="checkbox-header">
                             Web Design
